# pe-hackathon

./: .dockerignore  .gitattributes  .gitignore  AI_USAGE.md  CLAUDE.md  DECISION_LOG.md  Dockerfile  LICENSE  README.md  RUNBOOK.md  alert_rules.yml  compose.dev.yml  compose.fullstack.yml  compose.yml  locustfile.py  locustfile_health.py  loki-config.yml  prometheus.yml  promtail-config.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy-monitoring.yml  deploy.yml  docs.yml
app/: __init__.py  cache.py  database.py  logging.py  schemas.py  utils.py
app/models/: event.py  url.py
app/routes/: __init__.py  events.py  urls.py  users.py
app/templates/: index.html
docs/: ARCHITECTURE.md  CAPACITY_PLANNING.md  README.md  bottleneck_analysis.md  k8s-setup.md  k8s-troubleshooting.md
docs/IncidentReportQuest/: AlertDocumentation.md  (+2 more)
goals/: Documentation.md  IncidentResponse.md  ReliabilityEngineering.md  ScalabilityEngineering.md
k8s/: app-deployment.yaml  app-service.yaml  configmap.yaml  ingress.yaml  postgres-cluster.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secrets.yaml.example  valkey-deployment.yaml  valkey-values.yaml
loadtest_report/: index.html  report_200.html  report_50.html  report_500.html
monitoring/: alert_rules.yml  alertmanager.yml  loki.k8s.yml  prometheus.k8s.yml  prometheus.yml  promtail.k8s.yml  promtail.yml
nginx/: nginx.conf
scripts/: deploy-monitoring.sh  deploy.sh  generate_docs.py  seed.py
seeds/: events.csv  urls.csv  users.csv
tests/: conftest.py  test_events.py  test_health.py  test_users.py
(+31 files in other folders)
